--- a/package.json
+++ b/package.json
@@ -13,6 +13,9 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vicons/fluent": "^0.12.0",
+    "naive-ui": "^2.37.3",
+    "vfonts": "^0.0.3",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
   },
@@ -24,10 +27,13 @@
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
     "@vue/tsconfig": "^0.5.1",
+    "autoprefixer": "^10.4.17",
     "eslint": "^8.49.0",
     "eslint-plugin-vue": "^9.17.0",
     "npm-run-all2": "^6.1.1",
+    "postcss": "^8.4.35",
     "prettier": "^3.0.3",
+    "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
     "vue-tsc": "^1.8.27"
