--- a/package.json
+++ b/package.json
@@ -13,7 +13,6 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
-    "@vicons/fluent": "^0.12.0",
     "naive-ui": "^2.37.3",
     "vfonts": "^0.0.3",
     "vue": "^3.4.15",
@@ -23,6 +22,7 @@
     "@rushstack/eslint-patch": "^1.3.3",
     "@tsconfig/node20": "^20.1.2",
     "@types/node": "^20.11.10",
+    "@vicons/fa": "^0.12.0",
     "@vitejs/plugin-vue": "^5.0.3",
     "@vue/eslint-config-prettier": "^8.0.0",
     "@vue/eslint-config-typescript": "^12.0.0",
