--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "naive-ui": "^2.37.3",
+    "swiper": "^11.0.6",
     "vfonts": "^0.0.3",
     "vue": "^3.4.15",
     "vue-router": "^4.2.5"
