--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "mitt": "^3.0.1",
     "naive-ui": "^2.37.3",
     "swiper": "^11.0.6",
     "vfonts": "^0.0.3",
