--- a/package.json
+++ b/package.json
@@ -17,12 +17,14 @@
     "format": "prettier --write src/"
   },
   "dependencies": {
+    "@vueuse/core": "^10.9.0",
     "mitt": "^3.0.1",
     "naive-ui": "^2.37.3",
     "swiper": "^11.0.6",
     "vfonts": "^0.0.3",
     "vue": "^3.4.15",
-    "vue-router": "^4.2.5"
+    "vue-router": "^4.2.5",
+    "workbox-window": "^7.0.0"
   },
   "devDependencies": {
     "@rushstack/eslint-patch": "^1.3.3",
@@ -42,6 +44,7 @@
     "tailwindcss": "^3.4.1",
     "typescript": "~5.3.0",
     "vite": "^5.0.11",
+    "vite-plugin-pwa": "^0.19.4",
     "vue-tsc": "^1.8.27"
   }
 }
