--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -9,6 +9,9 @@
     "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
-    }
+    },
+    "types": [
+      "vite-plugin-pwa/vue"
+    ]
   }
 }
